fixed Additional menu options button alignment

--- a/src/apps/active-preview/Preview.less
+++ b/src/apps/active-preview/Preview.less
@@ -66,6 +66,9 @@
       display: flex;
       align-items: center;
       margin-left: 16px;
+      button {
+        align-self: stretch;
+      }
     }
   }
 
